# efc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  README.md  app.overlay  licenserc.toml  openocd.cfg  openocd_stm32f1_espprog.cfg  openocd_stm32f1_jlink.cfg  openocd_stm32f1_stlink.cfg  openocd_stm32f4_stlink.cfg  openocd_stm32h5_espprog.cfg  openocd_stm32h5_jlink.cfg  openocd_stm32h5_stlink.cfg  openocd_stm32wb_espprog.cfg  openocd_stm32wb_jlink.cfg  prj.conf  requirements.txt  west.yml
.github/license-checks/: config.json  license-header-cc.txt  license-header-cmake.txt
.github/workflows/: build.yml  format-check.yml  license-checks.yml  pre-commit-checks.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: blackpill_f411ce.overlay  eurus_nexus_v1_1.overlay  weact_stm32h562_core.overlay  weact_stm32h5_core.overlay
app/boards/eurus_nexus_v1_1/: board.yaml  eurus_nexus_v1_1.dts  eurus_nexus_v1_1.yaml
app/src/: logger.c  logger.h  main.c  motor_control.c  motor_control.h  nvs_ids.h  radio_receiver.c  radio_receiver.h  telemetry_packer.c  telemetry_packer.h  telemetry_sender.c  telemetry_sender.h  types.h
boards/: blackpill_f411ce.overlay  generic_stm32f103_bluepill.overlay  stm32_min_dev.overlay
boards/eurus_project/eurus_nexus_v1_1/: Kconfig.eurus_nexus_v1_1  board.yml  eurus_nexus_v1_1.dts  eurus_nexus_v1_1.yaml  eurus_nexus_v1_1_defconfig
boards/generic/stm32f103_bluepill/: Kconfig.defconfig  Kconfig.generic_stm32f103_bluepill  board.cmake  board.yml  generic_stm32f103_bluepill.dts  generic_stm32f103_bluepill.yaml  generic_stm32f103_bluepill_defconfig
boards/weact/stm32h562_core/: weact_stm32h562_core.dts
demos/adc/boards/: blackpill_f411ce.overlay
demos/adc/src/: main.c
demos/app_adc/: prj.conf
demos/app_adc/boards/: weact_stm32h562_core.overlay  weact_stm32h5_core.overlay
demos/app_adc/src/: main.c
demos/bmp280/: CMakeLists.txt  Kconfig
demos/bmp280/boards/: blackpill_f411ce.overlay  weact_stm32h5_core.overlay
demos/bmp280/src/: main.c
demos/esc/: CMakeLists.txt  Kconfig  README.md  prj.conf
demos/esc/boards/: blackpill_f411ce.overlay  weact_stm32h5_core.overlay
demos/esc/src/: main.c
demos/flash/: Kconfig  prj.conf
demos/flash/boards/: weact_stm32h5_core.overlay
demos/flash/src/: main.c
demos/icm42688p/: Kconfig  prj.conf
demos/icm42688p/boards/: blackpill_f411ce.overlay  weact_stm32h5_core.overlay
demos/icm42688p/src/: main.c
demos/mixer/: CMakeLists.txt  Kconfig  prj.conf
demos/mixer/boards/: blackpill_f411ce.overlay
demos/mixer/src/: main.c
demos/mpu6050/: Kconfig
demos/mpu6050/boards/: blackpill_f411ce.overlay  weact_stm32h5_core.overlay
demos/mpu6050/src/: main.c
demos/nvs-spi-flash/: CMakeLists.txt  Kconfig  prj.conf
demos/nvs-spi-flash/src/: main.c
demos/sbus/: CMakeLists.txt  Kconfig  prj.conf
demos/sbus/scripts/uart_sender/: README.md  main.py  send_serial.py
demos/sbus/src/: main.c
demos/sd_card/: Kconfig  prj.conf
demos/sd_card/boards/: blackpill_f411ce.overlay  weact_stm32h5_core.overlay
demos/sd_card/src/: main.c
libs/: CMakeLists.txt  esc.c  esc.h
libs/logging/: CMakeLists.txt
libs/logging/ulog/: CMakeLists.txt  ulog.c  ulog.h
libs/motor_control/: CMakeLists.txt
libs/motor_control/esc/: CMakeLists.txt  Kconfig  esc.c  esc.h
libs/motor_control/mixer/: CMakeLists.txt  Kconfig  README.md  mixer.c  mixer.h
libs/telemetry/: CMakeLists.txt
libs/telemetry/mavlink/: CMakeLists.txt  mavlink.c
libs/telemetry/mavlink/include/: mavlink_custom.h
messages/ulog/: README.md  accel.yaml  altitude.yaml  baro.yaml  gyro.yaml  mag.yaml
sitl/: CMakeLists.txt  README.txt
sitl/app/: CMakeLists.txt
sitl/app/src/: main.c
sitl/cmake/: linux-x86_64.cmake
sitl/src/: main.cpp  sitl_def.h  sitl_efc.cpp  sitl_jmavsim_sim.cpp  sitl_jmavsim_sim.h  sitl_main.cpp  sitl_pch.h  sitl_sim.cpp  sitl_sim.h  sitl_tcp_conn.cpp  sitl_tcp_conn.h
sitl/src/core/: sitl_sim.cpp  sitl_tcp_conn.h
sitl/src/main/: sitl_main.cpp
sitl/src/platform/linux/: sitl_tcp_conn_linux.cpp  sitl_tcp_conn_linux.h
sitl/src/platform/windows/: sitl_tcp_conn_win.cpp  sitl_tcp_conn_win.h
sitl/src/sim/: sitl_jmavsim_sim.cpp  sitl_jmavsim_sim.h  sitl_sim.cpp  sitl_sim.h
src/: main.c  telemetry_sender.c  telemetry_sender.h
src/logging/: ulog.c  ulog.h
src/logging/ulog/: CMakeLists.txt  ulog.c  ulog.h
src/protocol/mavlink/: common.xml
src/telemetry/mavlink/: CMakeLists.txt
tests/hardware/blinky/: CMakeLists.txt  main.c
tools/: ulog_gen.py
zephyr/: module.yml
